Update from https://github.com/thebesttv/eserver-static/commit/14e2900f0af34f68ea57f376444ebedcae7c0cf5

--- a/content/collections/index.html
+++ b/content/collections/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-10-25 16:15 -->
+<!-- 2022-10-25 16:25 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>收藏夹</title>
@@ -46,47 +46,47 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org9300886">1. 妙妙文章</a>
+<li><a href="#org02008a9">1. 妙妙文章</a>
 <ul>
-<li><a href="#org8077521">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
-<li><a href="#orga085393">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
-<li><a href="#org8fd60b3">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
-<li><a href="#org6b6363a">1.4. 关于编辑器</a></li>
-<li><a href="#orgfb9e5ad">1.5. 关于代码</a>
+<li><a href="#org842fecf">1.1. 关于死亡 &#x2014; 让世界知道我来过</a></li>
+<li><a href="#org199d1be">1.2. 关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></li>
+<li><a href="#org23a4a48">1.3. 关于编码 &#x2014; UTF-8 遍地开花</a></li>
+<li><a href="#org09a1c26">1.4. 关于编辑器</a></li>
+<li><a href="#org8caaf2c">1.5. 关于代码</a>
 <ul>
-<li><a href="#org1f0790d">1.5.1. Lisp</a></li>
+<li><a href="#orgcfeb985">1.5.1. Lisp</a></li>
 </ul>
 </li>
-<li><a href="#org7034c6c">1.6. 关于CPU</a></li>
-<li><a href="#org79f07cb">1.7. 关于算法</a>
+<li><a href="#orgbded910">1.6. 关于CPU</a></li>
+<li><a href="#orgc2ded6c">1.7. 关于算法</a>
 <ul>
-<li><a href="#orga227bec">1.7.1. 关于随机</a></li>
+<li><a href="#orgee2e226">1.7.1. 关于随机</a></li>
 </ul>
 </li>
-<li><a href="#orgc5174b0">1.8. 关于AI</a></li>
-<li><a href="#org79c4ec1">1.9. 关于软件</a>
+<li><a href="#org44dfe8f">1.8. 关于AI</a></li>
+<li><a href="#org2ad4ab3">1.9. 关于软件</a>
 <ul>
-<li><a href="#orgb036c1c">1.9.1. SQLite</a></li>
+<li><a href="#org067b7a4">1.9.1. SQLite</a></li>
 </ul>
 </li>
-<li><a href="#orgdd874e7">1.10. 关于workflow</a></li>
+<li><a href="#org1644367">1.10. 关于workflow</a></li>
 </ul>
 </li>
-<li><a href="#org5049b29">2. 棒棒视频</a>
+<li><a href="#org823f18d">2. 棒棒视频</a>
 <ul>
-<li><a href="#orgee6939e">2.1. Veritasium 真理元素</a></li>
-<li><a href="#org0c7fb1a">2.2. 各种剧</a></li>
-<li><a href="#org619ca2f">2.3. 电影</a></li>
+<li><a href="#org5131e6d">2.1. Veritasium 真理元素</a></li>
+<li><a href="#orgaeb1a2d">2.2. 各种剧</a></li>
+<li><a href="#orgbd9f7a3">2.3. 电影</a></li>
 </ul>
 </li>
-<li><a href="#orga7a455a">3. 快乐游戏</a></li>
-<li><a href="#orgd8e778b">4. 宝藏博主</a></li>
-<li><a href="#org791bbbc">5. 有意思的</a>
+<li><a href="#org19bb0ca">3. 快乐游戏</a></li>
+<li><a href="#orgdf3025e">4. 宝藏博主</a></li>
+<li><a href="#org8830fbf">5. 有意思的</a>
 <ul>
-<li><a href="#orge46b62d">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
+<li><a href="#orgf7be36a">5.1. 关于网页 &#x2014; HTML &amp; CSS</a></li>
 </ul>
 </li>
-<li><a href="#orge18a551">6. 我想玩的</a></li>
+<li><a href="#org9c7671c">6. 我想玩的</a></li>
 </ul>
 </div>
 </nav>
@@ -95,8 +95,8 @@
 这里大概会放一些我喜欢的东西🥰
 </p>
 
-<div id="outline-container-org9300886" class="outline-2">
-<h2 id="org9300886"><span class="section-number-2">1.</span> <a href="#org9300886">妙妙文章</a></h2>
+<div id="outline-container-org02008a9" class="outline-2">
+<h2 id="org02008a9"><span class="section-number-2">1.</span> <a href="#org02008a9">妙妙文章</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/archives/627/">2020 年年终总结：致即将 22 岁的自己 &#x2014; 翠翠</a> 你工人爷爷的年终总结</li>
@@ -433,7 +433,7 @@ cards until the game is over.
 有好看的鸟鸟~
 </p>
 
-<figure id="org2c6062f">
+<figure id="org0983a96">
 <img src="./index/raku-inoue-plant-arrangements-19.jpg" alt="raku-inoue-plant-arrangements-19.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -495,8 +495,8 @@ Take Umbrage.  Violators Will &#x2026;
 </ul>
 </div>
 
-<div id="outline-container-org8077521" class="outline-3">
-<h3 id="org8077521"><span class="section-number-3">1.1.</span> <a href="#org8077521">关于死亡 &#x2014; 让世界知道我来过</a></h3>
+<div id="outline-container-org842fecf" class="outline-3">
+<h3 id="org842fecf"><span class="section-number-3">1.1.</span> <a href="#org842fecf">关于死亡 &#x2014; 让世界知道我来过</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <ul class="org-ul">
 <li><p>
@@ -537,8 +537,8 @@ Take Umbrage.  Violators Will &#x2026;
 </div>
 </div>
 
-<div id="outline-container-orga085393" class="outline-3">
-<h3 id="orga085393"><span class="section-number-3">1.2.</span> <a href="#orga085393">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
+<div id="outline-container-org199d1be" class="outline-3">
+<h3 id="org199d1be"><span class="section-number-3">1.2.</span> <a href="#org199d1be">关于健康 &#x2014; 留得青山在, 不怕没柴烧</a></h3>
 <div class="outline-text-3" id="text-1-2">
 <ul class="org-ul">
 <li><p>
@@ -568,8 +568,8 @@ have to kill yourself to be good at something.
 </div>
 </div>
 
-<div id="outline-container-org8fd60b3" class="outline-3">
-<h3 id="org8fd60b3"><span class="section-number-3">1.3.</span> <a href="#org8fd60b3">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
+<div id="outline-container-org23a4a48" class="outline-3">
+<h3 id="org23a4a48"><span class="section-number-3">1.3.</span> <a href="#org23a4a48">关于编码 &#x2014; UTF-8 遍地开花</a></h3>
 <div class="outline-text-3" id="text-1-3">
 <ul class="org-ul">
 <li><a href="http://www.hanselman.com/blog/why-the-askobama-tweet-was-garbled-on-screen-know-your-utf8-unicode-ascii-and-ansi-decoding-mr-president">Why the #AskObama Tweet was Garbled on Screen: Know your UTF-8,
@@ -603,8 +603,8 @@ This is not thebesttv.
 </div>
 </div>
 
-<div id="outline-container-org6b6363a" class="outline-3">
-<h3 id="org6b6363a"><span class="section-number-3">1.4.</span> <a href="#org6b6363a">关于编辑器</a></h3>
+<div id="outline-container-org09a1c26" class="outline-3">
+<h3 id="org09a1c26"><span class="section-number-3">1.4.</span> <a href="#org09a1c26">关于编辑器</a></h3>
 <div class="outline-text-3" id="text-1-4">
 <ul class="org-ul">
 <li><p>
@@ -620,8 +620,8 @@ lsp and tree-sitter changed the entire ecosystem of editors.
 </div>
 </div>
 
-<div id="outline-container-orgfb9e5ad" class="outline-3">
-<h3 id="orgfb9e5ad"><span class="section-number-3">1.5.</span> <a href="#orgfb9e5ad">关于代码</a></h3>
+<div id="outline-container-org8caaf2c" class="outline-3">
+<h3 id="org8caaf2c"><span class="section-number-3">1.5.</span> <a href="#org8caaf2c">关于代码</a></h3>
 <div class="outline-text-3" id="text-1-5">
 <ul class="org-ul">
 <li><a href="https://gigamonkeys.com/code-reading/">Code is not literature &#x2014; Peter Seibel</a> Don't read code like it's a
@@ -646,8 +646,8 @@ future.</li>
 </ul>
 </div>
 
-<div id="outline-container-org1f0790d" class="outline-4">
-<h4 id="org1f0790d"><span class="section-number-4">1.5.1.</span> <a href="#org1f0790d">Lisp</a></h4>
+<div id="outline-container-orgcfeb985" class="outline-4">
+<h4 id="orgcfeb985"><span class="section-number-4">1.5.1.</span> <a href="#orgcfeb985">Lisp</a></h4>
 <div class="outline-text-4" id="text-1-5-1">
 <ul class="org-ul">
 <li><a href="http://winestockwebdesign.com/Essays/Lisp_Curse.html">The Lisp Curse &#x2014; Rudolf Winestock</a>
@@ -670,8 +670,8 @@ inspired to create their own game.
 </div>
 </div>
 
-<div id="outline-container-org7034c6c" class="outline-3">
-<h3 id="org7034c6c"><span class="section-number-3">1.6.</span> <a href="#org7034c6c">关于CPU</a></h3>
+<div id="outline-container-orgbded910" class="outline-3">
+<h3 id="orgbded910"><span class="section-number-3">1.6.</span> <a href="#orgbded910">关于CPU</a></h3>
 <div class="outline-text-3" id="text-1-6">
 <ul class="org-ul">
 <li><p>
@@ -686,8 +686,8 @@ Intel并不是在挤牙膏，而是一直在努力探索。只有当你成为Int
 </div>
 </div>
 
-<div id="outline-container-org79f07cb" class="outline-3">
-<h3 id="org79f07cb"><span class="section-number-3">1.7.</span> <a href="#org79f07cb">关于算法</a></h3>
+<div id="outline-container-orgc2ded6c" class="outline-3">
+<h3 id="orgc2ded6c"><span class="section-number-3">1.7.</span> <a href="#orgc2ded6c">关于算法</a></h3>
 <div class="outline-text-3" id="text-1-7">
 <ul class="org-ul">
 <li><a href="https://yonatankra.com/how-to-find-a-unique-number-in-a-list-of-pairs/">How to find a unique number in a list containing <b>pairs</b>?</a> 注意这里其他的数都是成对出现的, 那直接对整个list异或就行啦~ 如果其他数的出现次数不是偶数, 也可以用hash.</li>
@@ -706,8 +706,8 @@ OSTEP 里看到的, 之前一直用的除法, 没想到还要酱写.</li>
 </ul>
 </div>
 
-<div id="outline-container-orga227bec" class="outline-4">
-<h4 id="orga227bec"><span class="section-number-4">1.7.1.</span> <a href="#orga227bec">关于随机</a></h4>
+<div id="outline-container-orgee2e226" class="outline-4">
+<h4 id="orgee2e226"><span class="section-number-4">1.7.1.</span> <a href="#orgee2e226">关于随机</a></h4>
 <div class="outline-text-4" id="text-1-7-1">
 <p>
 Cloudflare 的<a href="https://blog.cloudflare.com/">博客</a>有不少关于熵和随机的帖子
@@ -721,8 +721,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgc5174b0" class="outline-3">
-<h3 id="orgc5174b0"><span class="section-number-3">1.8.</span> <a href="#orgc5174b0">关于AI</a></h3>
+<div id="outline-container-org44dfe8f" class="outline-3">
+<h3 id="org44dfe8f"><span class="section-number-3">1.8.</span> <a href="#org44dfe8f">关于AI</a></h3>
 <div class="outline-text-3" id="text-1-8">
 <ul class="org-ul">
 <li><a href="https://simonwillison.net/2022/Jul/9/gpt-3-explain-code/">Using GPT-3 to explain how code works</a> 没想到GPT-3这么厉害?</li>
@@ -732,8 +732,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org79c4ec1" class="outline-3">
-<h3 id="org79c4ec1"><span class="section-number-3">1.9.</span> <a href="#org79c4ec1">关于软件</a></h3>
+<div id="outline-container-org2ad4ab3" class="outline-3">
+<h3 id="org2ad4ab3"><span class="section-number-3">1.9.</span> <a href="#org2ad4ab3">关于软件</a></h3>
 <div class="outline-text-3" id="text-1-9">
 <p>
 大概未经测试的软件总是脆弱的😮‍💨
@@ -744,8 +744,8 @@ Linux 的熵池</li>
 </ul>
 </div>
 
-<div id="outline-container-orgb036c1c" class="outline-4">
-<h4 id="orgb036c1c"><span class="section-number-4">1.9.1.</span> <a href="#orgb036c1c">SQLite</a></h4>
+<div id="outline-container-org067b7a4" class="outline-4">
+<h4 id="org067b7a4"><span class="section-number-4">1.9.1.</span> <a href="#org067b7a4">SQLite</a></h4>
 <div class="outline-text-4" id="text-1-9-1">
 <p>
 作为一个无处不在, 且运行于几乎所有架构与系统的数据库, SQLite 的测试代码量可谓恐怖&#x2014;测试代码行数是 SQLite 库的 608 倍, 几乎十亿行🤯
@@ -759,8 +759,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-orgdd874e7" class="outline-3">
-<h3 id="orgdd874e7"><span class="section-number-3">1.10.</span> <a href="#orgdd874e7">关于workflow</a></h3>
+<div id="outline-container-org1644367" class="outline-3">
+<h3 id="org1644367"><span class="section-number-3">1.10.</span> <a href="#org1644367">关于workflow</a></h3>
 <div class="outline-text-3" id="text-1-10">
 <ul class="org-ul">
 <li><a href="https://castel.dev/post/research-workflow/">My Mathematics PhD research workflow</a> 一个数学PhD的workflow, 包括LaTeX笔记
@@ -770,8 +770,8 @@ Linux 的熵池</li>
 </div>
 </div>
 
-<div id="outline-container-org5049b29" class="outline-2">
-<h2 id="org5049b29"><span class="section-number-2">2.</span> <a href="#org5049b29">棒棒视频</a></h2>
+<div id="outline-container-org823f18d" class="outline-2">
+<h2 id="org823f18d"><span class="section-number-2">2.</span> <a href="#org823f18d">棒棒视频</a></h2>
 <div class="outline-text-2" id="text-2">
 <ul class="org-ul">
 <li><p>
@@ -826,8 +826,8 @@ Practical, but also works on the human level in this case.
 </ul>
 </div>
 
-<div id="outline-container-orgee6939e" class="outline-3">
-<h3 id="orgee6939e"><span class="section-number-3">2.1.</span> <a href="#orgee6939e">Veritasium 真理元素</a></h3>
+<div id="outline-container-org5131e6d" class="outline-3">
+<h3 id="org5131e6d"><span class="section-number-3">2.1.</span> <a href="#org5131e6d">Veritasium 真理元素</a></h3>
 <div class="outline-text-3" id="text-2-1">
 <ul class="org-ul">
 <li><a href="https://youtu.be/IgF3OX8nT0w">The Most Powerful Computers You've Never Heard Of</a>
@@ -852,8 +852,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org0c7fb1a" class="outline-3">
-<h3 id="org0c7fb1a"><span class="section-number-3">2.2.</span> <a href="#org0c7fb1a">各种剧</a></h3>
+<div id="outline-container-orgaeb1a2d" class="outline-3">
+<h3 id="orgaeb1a2d"><span class="section-number-3">2.2.</span> <a href="#orgaeb1a2d">各种剧</a></h3>
 <div class="outline-text-3" id="text-2-2">
 <ul class="org-ul">
 <li>摩登家庭</li>
@@ -877,8 +877,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org619ca2f" class="outline-3">
-<h3 id="org619ca2f"><span class="section-number-3">2.3.</span> <a href="#org619ca2f">电影</a></h3>
+<div id="outline-container-orgbd9f7a3" class="outline-3">
+<h3 id="orgbd9f7a3"><span class="section-number-3">2.3.</span> <a href="#orgbd9f7a3">电影</a></h3>
 <div class="outline-text-3" id="text-2-3">
 <ul class="org-ul">
 <li><a href="https://movie.douban.com/subject/2131459/">机器人总动员</a></li>
@@ -913,8 +913,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orga7a455a" class="outline-2">
-<h2 id="orga7a455a"><span class="section-number-2">3.</span> <a href="#orga7a455a">快乐游戏</a></h2>
+<div id="outline-container-org19bb0ca" class="outline-2">
+<h2 id="org19bb0ca"><span class="section-number-2">3.</span> <a href="#org19bb0ca">快乐游戏</a></h2>
 <div class="outline-text-2" id="text-3">
 <blockquote>
 <p>
@@ -944,8 +944,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-orgd8e778b" class="outline-2">
-<h2 id="orgd8e778b"><span class="section-number-2">4.</span> <a href="#orgd8e778b">宝藏博主</a></h2>
+<div id="outline-container-orgdf3025e" class="outline-2">
+<h2 id="orgdf3025e"><span class="section-number-2">4.</span> <a href="#orgdf3025e">宝藏博主</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li><a href="https://idealclover.top/">翠翠 / Idealclover</a></li>
@@ -956,7 +956,7 @@ and exist, before it is generally received and practiced on.
 <a href="https://collet66.web.fc2.com/">Syosa's Room</a> 画了很多像素花, 鸟, 狗
 </p>
 
-<figure id="orgaba7124">
+<figure id="orgfb978bb">
 <img src="./index/pixel-birds.png" alt="pixel-birds.png" width="80%" style="margin-left: auto; margin-right: auto;">
 
 </figure></li>
@@ -964,8 +964,8 @@ and exist, before it is generally received and practiced on.
 </div>
 </div>
 
-<div id="outline-container-org791bbbc" class="outline-2">
-<h2 id="org791bbbc"><span class="section-number-2">5.</span> <a href="#org791bbbc">有意思的</a></h2>
+<div id="outline-container-org8830fbf" class="outline-2">
+<h2 id="org8830fbf"><span class="section-number-2">5.</span> <a href="#org8830fbf">有意思的</a></h2>
 <div class="outline-text-2" id="text-5">
 <ul class="org-ul">
 <li><p>
@@ -997,8 +997,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </ul>
 </div>
 
-<div id="outline-container-orge46b62d" class="outline-3">
-<h3 id="orge46b62d"><span class="section-number-3">5.1.</span> <a href="#orge46b62d">关于网页 &#x2014; HTML &amp; CSS</a></h3>
+<div id="outline-container-orgf7be36a" class="outline-3">
+<h3 id="orgf7be36a"><span class="section-number-3">5.1.</span> <a href="#orgf7be36a">关于网页 &#x2014; HTML &amp; CSS</a></h3>
 <div class="outline-text-3" id="text-5-1">
 <ul class="org-ul">
 <li><a href="https://pinecast.com/feed/emacscast">这个网站</a>是 XML 格式的 RSS feed，不过仿佛加了一层 stylesheet 啥的🤔，
@@ -1010,8 +1010,8 @@ Always check your friendship before terminating it.  hhhh</li>
 </div>
 </div>
 
-<div id="outline-container-orge18a551" class="outline-2">
-<h2 id="orge18a551"><span class="section-number-2">6.</span> <a href="#orge18a551">我想玩的</a></h2>
+<div id="outline-container-org9c7671c" class="outline-2">
+<h2 id="org9c7671c"><span class="section-number-2">6.</span> <a href="#org9c7671c">我想玩的</a></h2>
 <div class="outline-text-2" id="text-6">
 <p>
 大概是我想玩的各种游戏, 但因为事情好多好多, 而且只有一个集显笔记本,
@@ -1034,7 +1034,7 @@ Always check your friendship before terminating it.  hhhh</li>
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:10</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-23 21:24</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 16:15</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 16:25</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/collections/index.org">content/collections/index.org</a></td></tr>
 </table>
