--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-10-25 16:15 -->
+<!-- 2022-10-25 16:25 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>小渴栈</title>
@@ -47,7 +47,7 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org63168d1">1. 文章列表</a></li>
+<li><a href="#orgd710c35">1. 文章列表</a></li>
 </ul>
 </div>
 </nav>
@@ -57,18 +57,18 @@
 </p>
 
 <p>
-用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#org8d7e8a0">1</a> 所示.
+用 <a href="https://github.com/githubocto/repo-visualizer">repo-visualizer</a> 生成对 <a href="https://github.com/thebesttv/eserver-static">eserver-static</a> 的可视化, 如图 <a href="#org32d0349">1</a> 所示.
 </p>
 
 
-<figure id="org8d7e8a0">
+<figure id="org32d0349">
 <img src="./diagram.svg" alt="diagram.svg" class="org-svg" width="90%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>博客内容可视化</figcaption>
 </figure>
 
-<div id="outline-container-org63168d1" class="outline-2">
-<h2 id="org63168d1"><span class="section-number-2">1.</span> <a href="#org63168d1">文章列表</a></h2>
+<div id="outline-container-orgd710c35" class="outline-2">
+<h2 id="orgd710c35"><span class="section-number-2">1.</span> <a href="#orgd710c35">文章列表</a></h2>
 <div class="outline-text-2" id="text-1">
 <ul class="org-ul">
 <li><a href="index.html">小渴栈</a></li>
@@ -106,7 +106,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-25 09:20</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-27 21:44</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 16:15</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 16:25</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/index.org">index.org</a></td></tr>
 </table>
