--- a/content/daily/2022-09-28.html
+++ b/content/daily/2022-09-28.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-10-25 16:25 -->
+<!-- 2022-10-25 16:53 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>保研回忆录</title>
@@ -46,19 +46,19 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org264c1eb">1. 暑假</a>
+<li><a href="#org3350d3f">1. 暑假</a>
 <ul>
-<li><a href="#orge904c7a">1.1. 夏令营</a></li>
+<li><a href="#org7dea521">1.1. 夏令营</a></li>
 </ul>
 </li>
-<li><a href="#orga58e3f8">2. 打工</a></li>
-<li><a href="#orgd37ce3d">3. 我的928</a>
+<li><a href="#org457ff9c">2. 打工</a></li>
+<li><a href="#org41682c1">3. 我的928</a>
 <ul>
-<li><a href="#orgae640f6">3.1. 928演唱会(bushi</a></li>
+<li><a href="#org333717b">3.1. 928演唱会(bushi</a></li>
 </ul>
 </li>
-<li><a href="#org3aa5881">4. 他们的928</a></li>
-<li><a href="#orgc99cf5f">5. 总结</a></li>
+<li><a href="#orgb118360">4. 他们的928</a></li>
+<li><a href="#org2b385da">5. 总结</a></li>
 </ul>
 </div>
 </nav>
@@ -68,7 +68,7 @@
 </p>
 
 
-<figure id="org37b993e">
+<figure id="orgabbd0aa">
 <img src="2022-09-28/928-nju.jpg" alt="928-nju.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;1&nbsp; </span>南大offer</figcaption>
@@ -91,8 +91,8 @@
 <li><a href="http://www.cskaoyan.com/thread-237791-1-1.html">中科院计算所实验室情况简要介绍</a></li>
 </ul>
 
-<div id="outline-container-org264c1eb" class="outline-2">
-<h2 id="org264c1eb"><span class="section-number-2">1.</span> <a href="#org264c1eb">暑假</a></h2>
+<div id="outline-container-org3350d3f" class="outline-2">
+<h2 id="org3350d3f"><span class="section-number-2">1.</span> <a href="#org3350d3f">暑假</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 夏令营之前我是很想去计算所学体系结构的,
@@ -116,8 +116,8 @@
 </p>
 </div>
 
-<div id="outline-container-orge904c7a" class="outline-3">
-<h3 id="orge904c7a"><span class="section-number-3">1.1.</span> <a href="#orge904c7a">夏令营</a></h3>
+<div id="outline-container-org7dea521" class="outline-3">
+<h3 id="org7dea521"><span class="section-number-3">1.1.</span> <a href="#org7dea521">夏令营</a></h3>
 <div class="outline-text-3" id="text-1-1">
 <p>
 被直接拒的学校
@@ -159,8 +159,8 @@
 </div>
 </div>
 
-<div id="outline-container-orga58e3f8" class="outline-2">
-<h2 id="orga58e3f8"><span class="section-number-2">2.</span> <a href="#orga58e3f8">打工</a></h2>
+<div id="outline-container-org457ff9c" class="outline-2">
+<h2 id="org457ff9c"><span class="section-number-2">2.</span> <a href="#org457ff9c">打工</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 跟了wy之后就开始学静态分析了, 还是继续看三下没看完的南大程序分析课,
@@ -174,8 +174,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgd37ce3d" class="outline-2">
-<h2 id="orgd37ce3d"><span class="section-number-2">3.</span> <a href="#orgd37ce3d">我的928</a></h2>
+<div id="outline-container-org41682c1" class="outline-2">
+<h2 id="org41682c1"><span class="section-number-2">3.</span> <a href="#org41682c1">我的928</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 928还算平静, 照着群里的通知一步步做就行了.
@@ -191,8 +191,8 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 </div>
 
-<div id="outline-container-orgae640f6" class="outline-3">
-<h3 id="orgae640f6"><span class="section-number-3">3.1.</span> <a href="#orgae640f6">928演唱会(bushi</a></h3>
+<div id="outline-container-org333717b" class="outline-3">
+<h3 id="org333717b"><span class="section-number-3">3.1.</span> <a href="#org333717b">928演唱会(bushi</a></h3>
 <div class="outline-text-3" id="text-3-1">
 <p>
 演唱会是在二运开的, 和jdh一起去听着玩, 一开始因为没有门票被挡在外面,
@@ -200,7 +200,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org498c598">
+<figure id="org938c93d">
 <img src="2022-09-28/outside.jpg" alt="outside.jpg" width="60%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;2&nbsp; </span>被挡在外面</figcaption>
@@ -212,7 +212,7 @@ p.s. IDEA 写 Java 是真的方便
 </p>
 
 
-<figure id="org5f149a2">
+<figure id="org7cde026">
 <img src="2022-09-28/auditorium.jpg" alt="auditorium.jpg" width="80%" style="margin-left: auto; margin-right: auto;">
 
 <figcaption><span class="figure-number">&#22270;3&nbsp; </span>在观众席上</figcaption>
@@ -225,8 +225,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-org3aa5881" class="outline-2">
-<h2 id="org3aa5881"><span class="section-number-2">4.</span> <a href="#org3aa5881">他们的928</a></h2>
+<div id="outline-container-orgb118360" class="outline-2">
+<h2 id="orgb118360"><span class="section-number-2">4.</span> <a href="#orgb118360">他们的928</a></h2>
 <div class="outline-text-2" id="text-4">
 <ul class="org-ul">
 <li>翔去了复旦NLP</li>
@@ -246,8 +246,8 @@ p.s. IDEA 写 Java 是真的方便
 </div>
 </div>
 
-<div id="outline-container-orgc99cf5f" class="outline-2">
-<h2 id="orgc99cf5f"><span class="section-number-2">5.</span> <a href="#orgc99cf5f">总结</a></h2>
+<div id="outline-container-org2b385da" class="outline-2">
+<h2 id="org2b385da"><span class="section-number-2">5.</span> <a href="#org2b385da">总结</a></h2>
 <div class="outline-text-2" id="text-5">
 <p>
 保研最难的两关都过了, 也貌似遇到了不错的导师.
@@ -262,7 +262,7 @@ p.s. IDEA 写 Java 是真的方便
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-09-28 16:27</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-09-29 10:48</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 16:25</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 16:53</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2022-09-28.org">content/daily/2022-09-28.org</a></td></tr>
 </table>
