--- a/content/linux/vectored-io.html
+++ b/content/linux/vectored-io.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-10-25 16:25 -->
+<!-- 2022-10-25 16:53 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Vectored IO</title>
@@ -46,13 +46,13 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#org8b7d5f5">1. What is Vectored IO</a></li>
-<li><a href="#orged8a752">2. Vectored IO in Linux</a></li>
-<li><a href="#orgfb297c9">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
-<li><a href="#org95d4639">4. Examples</a>
+<li><a href="#org8047d42">1. What is Vectored IO</a></li>
+<li><a href="#org167df17">2. Vectored IO in Linux</a></li>
+<li><a href="#org2f4ad0f">3. Comparison with <code>read()</code> &amp; <code>write()</code></a></li>
+<li><a href="#orgfd2f141">4. Examples</a>
 <ul>
-<li><a href="#orgc99c0f6">4.1. <code>write()</code></a></li>
-<li><a href="#orgb1b14cf">4.2. <code>writev()</code></a></li>
+<li><a href="#org4ab9125">4.1. <code>write()</code></a></li>
+<li><a href="#org6385af2">4.2. <code>writev()</code></a></li>
 </ul>
 </li>
 </ul>
@@ -68,8 +68,8 @@
 <li><a href="https://www.oreilly.com/library/view/linux-system-programming/0596009585/ch04.html#:~:text=fun%20to%20implement.-,readv(%20)%20and%20writev(%20),-POSIX%201003.1%2D2001">Chapter 4. Advanced File I/O &#x2014; Linux System Programming by Robert Love</a></li>
 </ul>
 
-<div id="outline-container-org8b7d5f5" class="outline-2">
-<h2 id="org8b7d5f5"><span class="section-number-2">1.</span> <a href="#org8b7d5f5">What is Vectored IO</a></h2>
+<div id="outline-container-org8047d42" class="outline-2">
+<h2 id="org8047d42"><span class="section-number-2">1.</span> <a href="#org8047d42">What is Vectored IO</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 <i>Vectored IO</i> is doing IO with <b>a vector of buffers</b>, instead of using
@@ -80,8 +80,8 @@ set of buffers.
 </div>
 </div>
 
-<div id="outline-container-orged8a752" class="outline-2">
-<h2 id="orged8a752"><span class="section-number-2">2.</span> <a href="#orged8a752">Vectored IO in Linux</a></h2>
+<div id="outline-container-org167df17" class="outline-2">
+<h2 id="org167df17"><span class="section-number-2">2.</span> <a href="#org167df17">Vectored IO in Linux</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 <code>readv()</code> (scatter input) and <code>writev()</code> (gather output) are Linux
@@ -119,8 +119,8 @@ Each buffer in the <code>iov</code> array is a <code>struct iovec</code>:
 </div>
 </div>
 
-<div id="outline-container-orgfb297c9" class="outline-2">
-<h2 id="orgfb297c9"><span class="section-number-2">3.</span> <a href="#orgfb297c9">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
+<div id="outline-container-org2f4ad0f" class="outline-2">
+<h2 id="org2f4ad0f"><span class="section-number-2">3.</span> <a href="#org2f4ad0f">Comparison with <code>read()</code> &amp; <code>write()</code></a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 Traditional <code>read()</code> and <code>write()</code> functions have similar signatures
@@ -137,12 +137,12 @@ only read from <code>buf</code>).
 </div>
 </div>
 
-<div id="outline-container-org95d4639" class="outline-2">
-<h2 id="org95d4639"><span class="section-number-2">4.</span> <a href="#org95d4639">Examples</a></h2>
+<div id="outline-container-orgfd2f141" class="outline-2">
+<h2 id="orgfd2f141"><span class="section-number-2">4.</span> <a href="#orgfd2f141">Examples</a></h2>
 <div class="outline-text-2" id="text-4">
 </div>
-<div id="outline-container-orgc99c0f6" class="outline-3">
-<h3 id="orgc99c0f6"><span class="section-number-3">4.1.</span> <a href="#orgc99c0f6"><code>write()</code></a></h3>
+<div id="outline-container-org4ab9125" class="outline-3">
+<h3 id="org4ab9125"><span class="section-number-3">4.1.</span> <a href="#org4ab9125"><code>write()</code></a></h3>
 <div class="outline-text-3" id="text-4-1">
 <p>
 Printing a message to stdout with <code>write()</code>:
@@ -165,8 +165,8 @@ Printing a message to stdout with <code>write()</code>:
 </div>
 </div>
 
-<div id="outline-container-orgb1b14cf" class="outline-3">
-<h3 id="orgb1b14cf"><span class="section-number-3">4.2.</span> <a href="#orgb1b14cf"><code>writev()</code></a></h3>
+<div id="outline-container-org6385af2" class="outline-3">
+<h3 id="org6385af2"><span class="section-number-3">4.2.</span> <a href="#org6385af2"><code>writev()</code></a></h3>
 <div class="outline-text-3" id="text-4-2">
 <p>
 Splitting the message into 3 separate buffers and printing them to
@@ -207,7 +207,7 @@ stdout with <code>writev()</code>:
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2022-10-22 16:07</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-22 17:06</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 16:25</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 16:53</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/linux/vectored-io.org">content/linux/vectored-io.org</a></td></tr>
 </table>
