--- a/content/daily/2021-05-19.html
+++ b/content/daily/2021-05-19.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
-<!-- 2022-10-25 16:53 -->
+<!-- 2022-10-26 03:26 -->
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>不知道要写啥的第二篇日记</title>
@@ -46,17 +46,17 @@
 <h2>&#30446;&#24405;</h2>
 <div id="text-table-of-contents" role="doc-toc">
 <ul>
-<li><a href="#orge85b85f">1. 一大早</a></li>
-<li><a href="#org1358397">2. 然后是剩下的无趣一天🙃</a></li>
-<li><a href="#org4980a62">3. 科研训练</a></li>
-<li><a href="#orgd56b734">4. 520</a></li>
+<li><a href="#org7df7693">1. 一大早</a></li>
+<li><a href="#orgf059e1a">2. 然后是剩下的无趣一天🙃</a></li>
+<li><a href="#org332ff40">3. 科研训练</a></li>
+<li><a href="#orgc057527">4. 520</a></li>
 </ul>
 </div>
 </nav>
 <hr style="width: 80%;">
 
-<div id="outline-container-orge85b85f" class="outline-2">
-<h2 id="orge85b85f"><span class="section-number-2">1.</span> <a href="#orge85b85f">一大早</a></h2>
+<div id="outline-container-org7df7693" class="outline-2">
+<h2 id="org7df7693"><span class="section-number-2">1.</span> <a href="#org7df7693">一大早</a></h2>
 <div class="outline-text-2" id="text-1">
 <p>
 概统八点半才上课，现在在宿舍干脆干点啥。 给博客加上了一个
@@ -65,8 +65,8 @@
 </div>
 </div>
 
-<div id="outline-container-org1358397" class="outline-2">
-<h2 id="org1358397"><span class="section-number-2">2.</span> <a href="#org1358397">然后是剩下的无趣一天🙃</a></h2>
+<div id="outline-container-orgf059e1a" class="outline-2">
+<h2 id="orgf059e1a"><span class="section-number-2">2.</span> <a href="#orgf059e1a">然后是剩下的无趣一天🙃</a></h2>
 <div class="outline-text-2" id="text-2">
 <p>
 下午数电实验，回宿舍了才发现U盘忘拿了……结果一共撑着伞在雨里走了三趟……
@@ -92,8 +92,8 @@
 </div>
 </div>
 
-<div id="outline-container-org4980a62" class="outline-2">
-<h2 id="org4980a62"><span class="section-number-2">3.</span> <a href="#org4980a62">科研训练</a></h2>
+<div id="outline-container-org332ff40" class="outline-2">
+<h2 id="org332ff40"><span class="section-number-2">3.</span> <a href="#org332ff40">科研训练</a></h2>
 <div class="outline-text-2" id="text-3">
 <p>
 哦对了，下午数电实验结束去找了学长，弄了弄科研训练的事情，大概就是一年弄出篇文章的样子。
@@ -101,8 +101,8 @@
 </div>
 </div>
 
-<div id="outline-container-orgd56b734" class="outline-2">
-<h2 id="orgd56b734"><span class="section-number-2">4.</span> <a href="#orgd56b734">520</a></h2>
+<div id="outline-container-orgc057527" class="outline-2">
+<h2 id="orgc057527"><span class="section-number-2">4.</span> <a href="#orgc057527">520</a></h2>
 <div class="outline-text-2" id="text-4">
 <p>
 又对了，明天520了（虽然和我莫得关系）。
@@ -116,7 +116,7 @@
   <tr><td class="org-right">Author</td><td class="org-left">thebesttv</td></tr>
   <tr><td class="org-right">Created</td><td class="org-left">2021-05-19 08:16</td></tr>
   <tr><td class="org-right">Modified</td><td class="org-left">2022-10-10 12:17</td></tr>
-  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-25 16:53</td></tr>
+  <tr><td class="org-right">Generated</td><td class="org-left">2022-10-26 03:26</td></tr>
   <tr><td class="org-right">Version</td><td class="org-left"><a href="https://www.gnu.org/software/emacs/">Emacs</a> 28.2 (<a href="https://orgmode.org">Org</a> mode 9.5.5)</td></tr>
   <tr><td class="org-right">Raw</td><td class="org-left"><a href="https://github.com/thebesttv/thebesttv.github.io/blob/main/content/daily/2021-05-19.org">content/daily/2021-05-19.org</a></td></tr>
 </table>
